Commit de melhorias: correções e refatorações nos códigos