@@ -1,7 +1,6 @@
 package br.com.wmw.vendafacil_backend.data.models.cliente;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import br.com.wmw.vendafacil_backend.domain.cliente.entity.Cliente;
 import lombok.Getter;
@@ -18,7 +17,7 @@ public class ClienteResponseModel {
 	}
 
 	public static List<ClienteResponseModel> convert(final List<Cliente> clientes) {
-		return clientes.stream().map(ClienteResponseModel::new).collect(Collectors.toList());
+		return clientes.stream().map(ClienteResponseModel::new).toList();
 	}
 
 }
